<?xml version="1.0"?>
<package format="2">
  <name>qmp</name>
  <version>0.0.0</version>
  <description>
    ROS packages for the qmp (meta package)
  </description>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>qmp_bringup</exec_depend>
  <exec_depend>qmp_description</exec_depend>
  <exec_depend>qmp_navigation</exec_depend>
  <exec_depend>qmp_slam</exec_depend>
  <exec_depend>qmp_teleop</exec_depend>
  <export><metapackage/></export>
</package>

